- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "pst-pdf.doc.tar.xz": a56c19218d59fb1e8127bf249983a03d9cea26ab
-  "pst-pdf.source.tar.xz": d5d886840aaf387dc9772f58636f8b0e0f80fbd4
-  "pst-pdf.tar.xz": 8448ff53ef5a4d2fd03f011b0e4bbea9183054dd
+  pst-pdf.doc.tar.xz: 66085fcd56488e2e86565920638170732499755f
+  pst-pdf.source.tar.xz: cbd876272ecc4bd9ae5fd1050426600a90db8370
+  pst-pdf.tar.xz: d079cd5478bd176c3766a7405e3f532b5b354903
